# cstz

./: .gitignore  CoreProof.agda  STUDY.md  Topos-Theoretic Grammar Induction and PRNG.md  inference.agda  pathological.txt  pyproject.toml
agda/: cstz.agda-lib
design/: BOOTSTRAP.md  INDEX.md  REWRITE_STAGES.md  artifacts.jsonl  corrections.jsonl  decisions.jsonl  lemmas.jsonl  principles.jsonl  questions.jsonl  rejected.jsonl
paper/: acknowledgments.tex  main.tex  preamble.tex
paper2/: main.tex  preamble.tex
reports/: agda_decls.jsonl  calibrated_weights.json  calibration_trace.jsonl  cofiber.md  conflicts.md  divergence.md  gaps.jsonl  gaps.md  paper_decls.jsonl  pipeline.md  python_decls.jsonl  registry_summary.json  residues.jsonl  residues.md  role_map.json  structural_vs_lexical.md  triples.jsonl  triples.md  validation.jsonl  validation.md
rhpf-pff-profiles/: AUDIT.md  pff.amr.md  pff.context.jsonld  pff.core.md  pff.openapi.yaml  pff.rdf.ttl  pff.schema.json  pff.shacl.ttl  pff.sql
scripts/: align_parallel.py  align_perspectives.py  app_f_trace.py  calibrate_weights.py  candidate_families.py  closed_loop.py  count_postulates.py  design_sppf.py  discriminator_registry.py  extract_agda.py  extract_paper.py  extract_python.py  gap_analysis.py  run_pipeline.sh  structural_identity.py  structural_vs_lexical.py  validate_against_comments.py  write_reports.py
tests/: test_agda_synth_pff.py  test_byte_classifier.py  test_category.py  test_core.py  test_examples.py  test_exterior.py  test_framework.py  test_gf2.py  test_higher.py  test_homotopy.py  test_pff.py  (+8 more)
(+217 files in other folders)
